@@ -1,1 +1,5 @@
-Ethereum markdown reader
+# Ethereum markdown reader
+
+## Documentation
+
+* Styling is done through a single style sheet. Support has already been built into the app as I used CSS to display the error text in red.
