@@ -34,7 +34,7 @@
     "comma-spacing": [2],
     "comma-style": [2, "last"],
     "complexity": [0, 11],
-    "consistent-return": [2],
+    "consistent-return": [0],
     "consistent-this": [0, "that"],
     "curly": [2, "multi-line"],
     "default-case": [2],
@@ -42,7 +42,7 @@
       "allowKeywords": true
     }],
     "eol-last": [2],
-    "eqeqeq": [2],
+    "eqeqeq": [0],
     "func-names": [0],
     "func-style": [0, "declaration"],
     "generator-star-spacing": [2, "after"],
