@@ -1,6 +1,6 @@
 {
   "name": "ethereum-markdown-reader",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Development environment for ethereum-markdown-reader",
   "keywords": [
   ],
