@@ -1,0 +1,5 @@
+# Links tests
+
+* [External](https://swarm-guide.readthedocs.io/)
+* [Internal, non existing](#fakedocument.md)
+* [Internal, existing](#book1.md)
