@@ -1,38 +1,75 @@
 /**
  * Dependencies
  */
-import 'src/style.scss';
-import marked from 'src/helpers/marked.js';
+	// Styling
+	import './style.scss';
+
+	// Support functions
+	import support from 'src/helpers/core/index.js';
+
+	// Vendor functions
+	import marked from 'src/helpers/vendor/marked.js';
 
 /**
  * Variables
  */
-const baseUrl = '/~nagydani/md/';
+//const baseUrl = '/~nagydani/md/';
+const baseUrl = './repository/md/';
 
 /**
- * Code to run on change of location hash
+ * On change URL, try to render a document
  */
 const fragmentChange = function() {
 
 	if (window.location.hash) {
-		const fragment = window.location.hash.substring(1);
+		const swarmFragment = window.location.hash.substring(1);
 
-		// Change page title to level 1 heading
-		const renderer = new marked.Renderer();
+		/**
+		 * Set up the markdown render options
+		 */
+			const renderer = new marked.Renderer();
 
-		renderer.heading = function(text, level) {
-			if (level === 1) {
-				document.title = text;
+		/**
+		 * Grab a document and render it to the container
+		 */
+			const swarmDocumentPath = baseUrl + swarmFragment;
+
+			/*eslint-disable */
+			const xhr = new XMLHttpRequest();
+			/*eslint-enable */
+
+			xhr.onreadystatechange = function() {
+				if (xhr.readyState === 4) {
+					// Check if it exists and present error if file does not exist
+					if (xhr.status == '404') {
+							// Clear previous content
+							support.render.clearContent();
+
+							// Render an error
+							document.getElementById('app__error').innerHTML =
+							marked('# Oops! \n\nWe could not find this file.');
+
+							document.title = 'File not found!';
+					} else {
+							// Clear previous content
+							support.render.clearContent();
+
+							// Render document title with an initial title and search for new title
+							support.render.renderDocumentTitle(renderer, 'unnamed');
+
+							// Render the document
+							document.getElementById('app__markdownContent').innerHTML =
+							marked(xhr.responseText, { renderer : renderer });
+					}
 			}
-			return '<h' + level + '>' + text + '</h' + level + '>\n';
 		};
 
-		// render document to container
-		document.getElementById('content').innerHTML =
-		marked('# Marked in browser\n\nRendered by **marked**.', { renderer : renderer });
-		console.log(baseUrl + fragment);
+		// Send request
+		xhr.open('GET', swarmDocumentPath, false);
+		xhr.send();
 	} else {
-		// leave document empty
+		// Leave document empty
+		return;
 	}
 };
 
@@ -41,4 +78,3 @@ window.onhashchange = fragmentChange;
 
 // Run the function
 fragmentChange();
-
