@@ -1,2 +1,3 @@
 12/01/2017 : 0.0.0 - Project base stable
 12/01/2017 : 0.0.1 - Markdown test
+14/01/2017 : 0.0.2 - Page title updating, browsing to other fragments, error handling
